--- a/src/main/resources/templates/site/setting.html
+++ b/src/main/resources/templates/site/setting.html
@@ -65,39 +65,15 @@
 				<!-- 上传头像 -->
 				<h6 class="text-left text-info border-bottom pb-2">上传头像</h6>
 
-<!--				<form class="mt-5" method="post" enctype="multipart/form-data" th:action="@{/user/upload}">-->
-<!--					<div class="form-group row mt-4">-->
-<!--						<label for="head-image" class="col-sm-2 col-form-label text-right">选择头像:</label>-->
-<!--						<div class="col-sm-10">-->
-<!--							<div class="custom-file">-->
-<!--								<input type="file" th:class="|custom-file-input ${error!=null?'is-invalid':''}|"-->
-<!--									   id="head-image" name="headerImage" lang="es" required="">-->
-<!--								<label class="custom-file-label" for="head-image" data-browse="文件">选择一张图片</label>-->
-<!--								<div class="invalid-feedback" th:text="${error}">-->
-<!--									该账号不存在!-->
-<!--								</div>-->
-<!--							</div>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--					<div class="form-group row mt-4">-->
-<!--						<div class="col-sm-2"></div>-->
-<!--						<div class="col-sm-10 text-center">-->
-<!--							<button type="submit" class="btn btn-info text-white form-control">立即上传</button>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--				</form>-->
-
-				<!--上传到七牛云-->
-				<form class="mt-5" id="uploadForm">
+				<form class="mt-5" method="post" enctype="multipart/form-data" th:action="@{/user/upload}">
 					<div class="form-group row mt-4">
 						<label for="head-image" class="col-sm-2 col-form-label text-right">选择头像:</label>
 						<div class="col-sm-10">
 							<div class="custom-file">
-								<input type="hidden" name="token" th:value="${uploadToken}">
-								<input type="hidden" name="key" th:value="${fileName}">
- 								<input type="file" class="custom-file-input" id="head-image" name="file" lang="es" required="">
+								<input type="file" th:class="|custom-file-input ${error!=null?'is-invalid':''}|"
+									   id="head-image" name="headerImage" lang="es" required="" onchange="displayFileName(this)">
 								<label class="custom-file-label" for="head-image" data-browse="文件">选择一张图片</label>
-								<div class="invalid-feedback">
+								<div class="invalid-feedback" th:text="${error}">
 									该账号不存在!
 								</div>
 							</div>
@@ -111,14 +87,38 @@
 					</div>
 				</form>
 
+				<!--上传到七牛云-->
+<!--				<form class="mt-5" id="uploadForm">-->
+<!--					<div class="form-group row mt-4">-->
+<!--						<label for="head-image" class="col-sm-2 col-form-label text-right">选择头像:</label>-->
+<!--						<div class="col-sm-10">-->
+<!--							<div class="custom-file">-->
+<!--								<input type="hidden" name="token" th:value="${uploadToken}">-->
+<!--								<input type="hidden" name="key" th:value="${fileName}">-->
+<!-- 								<input type="file" class="custom-file-input" id="head-image" name="file" lang="es" required="">-->
+<!--								<label class="custom-file-label" for="head-image" data-browse="文件">选择一张图片</label>-->
+<!--								<div class="invalid-feedback">-->
+<!--									该账号不存在!-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<div class="form-group row mt-4">-->
+<!--						<div class="col-sm-2"></div>-->
+<!--						<div class="col-sm-10 text-center">-->
+<!--							<button type="submit" class="btn btn-info text-white form-control">立即上传</button>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</form>-->
+
 				<!-- 修改密码 -->
 				<h6 class="text-left text-info border-bottom pb-2 mt-5">修改密码</h6>
-				<form class="mt-5">				
+				<form class="mt-5" method="post" th:action="@{/user/updatePassword}">
 					<div class="form-group row mt-4">
 						<label for="old-password" class="col-sm-2 col-form-label text-right">原密码:</label>
 						<div class="col-sm-10">
-							<input type="password" class="form-control" id="old-password" placeholder="请输入原始密码!" required>
-							<div class="invalid-feedback">
+							<input type="password" th:class="|form-control ${oldPasswordMsg!=null?'is-invalid':''}|" id="old-password" name="oldPassword" placeholder="请输入原始密码!" required>
+							<div class="invalid-feedback" th:text="${oldPasswordMsg}">
 								密码长度不能小于8位!
 							</div>							
 						</div>
@@ -126,8 +126,8 @@
 					<div class="form-group row mt-4">
 						<label for="new-password" class="col-sm-2 col-form-label text-right">新密码:</label>
 						<div class="col-sm-10">
-							<input type="password" class="form-control" id="new-password" placeholder="请输入新的密码!" required>
-							<div class="invalid-feedback">
+							<input type="password" th:class="|form-control ${newPasswordMsg!=null?'is-invalid':''}|"  id="new-password" name="newPassword" placeholder="请输入新的密码!" required>
+							<div class="invalid-feedback" th:text="${newPasswordMsg}">
 								密码长度不能小于8位!
 							</div>							
 						</div>
@@ -135,8 +135,8 @@
 					<div class="form-group row mt-4">
 						<label for="confirm-password" class="col-sm-2 col-form-label text-right">确认密码:</label>
 						<div class="col-sm-10">
-							<input type="password" class="form-control" id="confirm-password" placeholder="再次输入新密码!" required>
-							<div class="invalid-feedback">
+							<input type="password" th:class="|form-control ${confirmPasswordMsg!=null?'is-invalid':''}|" id="confirm-password" name="confirmPassword" placeholder="再次输入新密码!" required>
+							<div class="invalid-feedback" th:text="${confirmPasswordMsg}">
 								两次输入的密码不一致!
 							</div>								
 						</div>
@@ -221,9 +221,16 @@
 	<script th:src="@{/js/global.js}"></script>
 	<script th:src="@{/js/setting.js}"></script>
 	<script>
-		$(function(){
+		$(function () {
 			bsCustomFileInput.init();
 		});
+
+		function displayFileName(input) {
+			const fileName = input.files[0].name;
+			const label = input.nextElementSibling; // Get the label element next to the input
+			label.innerText = fileName; // Set the label text to the file name
+		}
+
 	</script>
 </body>
 </html>
