--- a/src/main/resources/templates/mail/activation.html
+++ b/src/main/resources/templates/mail/activation.html
@@ -11,7 +11,7 @@
 			<b th:text="${email}">xxx@xxx.com</b>, 您好!
 		</p>
 		<p>
-			您正在注册牛客网, 这是一封激活邮件, 请点击 
+			您正在注册校园论坛, 这是一封激活邮件, 请点击
 			<a th:href="${url}">此链接</a>,
 			激活您的牛客账号!
 		</p>
